# ketabak

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  eslint.config.js  package.json  prettier.config.js  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: format.yaml  release.yaml
scripts/: bump.py
src/: App.css  App.tsx  DarkModeProvider.tsx  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json  test.ketabi
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: epub.rs  mod.rs  read.rs  sync.rs
src/components/: EpubSettings.tsx  IframeOptions.tsx  ProjectOptions.tsx  navBar.tsx
src/components/Editors/: createNewPage.tsx  editors.tsx  index.tsx  layout.tsx  sidebar.tsx
src/components/Editors/lexical/: LexicalEditor.tsx  Toolbar.tsx  ToolbarButton.tsx  theme.ts
src/components/Editors/lexical/nodes/: IframeNode.tsx  YouTubeNode.tsx
src/components/Editors/lexical/plugins/: Iframe.tsx  IframePlugin.tsx  YouTubePlugin.tsx
src/components/start/: index.tsx  newProject.tsx
src/components/ui/: Button.tsx  Card.tsx  DropDown.tsx  Input.tsx  Modal.tsx  Sonner.tsx
src/lib/: generateMeta.ts  transformer.ts  utils.ts
src/pages/: ExportPage.tsx
src/providers/: DarkModeProvider.tsx  EpubManager.tsx  FileProvider.tsx
src/types/: index.d.ts
