[package]
name = "ketabak"
version = "0.12.0"
description = "An open-source eBook creator that lets you write, design, and publish interactive digital books with ease."
authors = ["Adam Naji"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ketabak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
flate2 = "1"
epub-builder = "0.7"
anyhow = "1.0.99"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
eyre = "0.6.12"

