[package]
name = "ketabak"
version = "0.23.0"
description = "An open-source eBook creator that lets you write, design, and publish interactive digital books with ease."
authors = [ "Adam Naji",]
edition = "2021"

[lib]
name = "ketabak_lib"
crate-type = [ "staticlib", "cdylib", "rlib",]

[dependencies]
tauri-plugin-opener = "2"
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
flate2 = "1"
epub-builder = "0.7"
anyhow = "1.0.99"
regex = "1.11.1"
eyre = "0.6.12"

[dependencies.tauri]
version = "2"
features = []

[dependencies.serde]
version = "1"
features = [ "derive",]

[dependencies.chrono]
version = "0.4.41"
features = [ "serde",]

[build-dependencies.tauri-build]
version = "2"
features = []
